--- a/verslagOpdracht1.tex
+++ b/verslagOpdracht1.tex
@@ -15,7 +15,7 @@
 
 
 \title{Advanced Algorithms}
-\subtitle{Assignment 1}
+\subtitle{Programming Exercise 1}
 \author{Jorik Oostenbrink (4169263) and Thijs Boumans (4214854)}
 \date{}
 
@@ -28,7 +28,12 @@
 \section{Introduction}
 The minimum tardiness (scheduling) problem is defined as follows: given a single processor that has to process $n$ jobs $j_1,j_2,\dots,j_n$, where every job $j_i$ has a processing time/length $t_i$ and a due time $d_i$. Find a schedule that minimizes the total tardiness, i.e. $\sum_{i=1}^{n}{\max(0,c_i - d_i)}$, where $c_i$ is the completion time of job $i$.
 
-For assignment 1 of the course Advanced Algorithms we had to implement both the exact dynamic programming algorithm given in \cite{exact} and the approximate algorithm (FPTAS) given in \cite{approx}.
+For programming exercise 1 of the course Advanced Algorithms we had to implement both the exact dynamic programming algorithm given in \cite{exact} and the approximate algorithm (FPTAS) given in \cite{approx}.
+
+\section{Exact Dynamic Programming Algorithm}
+In ``A ``PseudoPolynomial'' Algorithm For Sequencing Jobs To Minimize Total Tardiness'' \cite{exact} E.L. Lawler suggested the following method to find an optimal solution to the minimum tardiness problem:
+
+First order the jobs in nondecreasing due time order.
 	
 \bibliographystyle{unsrt}
 \bibliography{mybibfile}
